objects/BMCServiceDesk__ModelFieldMapping__c.object
<CustomObject>
    <description>This object allows you to store data for the attributes related to the Model.</description>
    <fields>
        <fullName>BMCServiceDesk__FKModel__c</fullName>
        <description>Stores Model ID</description>
        <label>Model</label>
        <referenceTo>BMCServiceDesk__Model__c</referenceTo>
        <relationshipLabel>ModelFieldMappings</relationshipLabel>
        <relationshipName>ModelFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldName__c</fullName>
        <description>Stores Field API name of the BaseElement Field</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FieldValue__c</fullName>
        <description>Stores the mapping value for field mentioned in field  Name
For lookup fields it will store the name value</description>
        <label>Field Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LookupFieldId__c</fullName>
        <description>Stores ID for lookup field</description>
        <label>Lookup Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Model Field Mapping</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Model Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ModelFieldMappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>